SERVER-26560 Properly handle or avoid making throwing calls into ASIO within NetworkInterfaceASIO